--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "embla-carousel-react": "^8.6.0",
     "install": "^0.13.0",
     "npm": "^11.6.2",
     "react": "^19.2.0",
