fix(deps): replace @mui/styles and react-router-dom with react-multi-carousel
- Removed @mui/styles package and its dependencies from package-lock.json
- Replaced react-router-dom with react-multi-carousel version 2.8.6
- Added react-multi-carousel dependencies including core-js, install, and npm
- Updated related nested npm dependencies for react-multi-carousel
- Removed unused packages css-vendor, hyphenate-style-name, is-in-browser, jss and related plugins
- Cleaned up obsolete entries to reflect updated dependency tree

--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,6 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
-    "@mui/styles": "^6.5.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
@@ -16,7 +15,7 @@
     "npm": "^11.6.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.5",
+    "react-multi-carousel": "^2.8.6",
     "react-scripts": "5.0.1",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1",
